<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_medium"
    tools:context=".SheepDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_small"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_medium"
            android:text="@string/sheep_details_owner_name"
            android:textSize="@dimen/sheep_details_text_size" />

        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rajender Bisht"
            android:textSize="@dimen/sheep_details_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_large"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_medium"
            android:text="@string/sheep_details_location"
            android:textSize="@dimen/sheep_details_text_size" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kinauur"
            android:textSize="@dimen/sheep_details_text_size" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_small"
        android:text="@string/sheep_details"
        android:textSize="@dimen/sheep_details_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_small"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_medium"
            android:text="@string/sheep_details_genre"
            android:textSize="@dimen/sheep_details_text_size" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:textSize="@dimen/sheep_details_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_large"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_medium"
            android:text="@string/sheep_details_wool_micron"
            android:textSize="@dimen/sheep_details_text_size" />

        <TextView
            android:id="@+id/tvWoolMicron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="28"
            android:textSize="@dimen/sheep_details_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_large"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_medium"
            android:text="@string/sheep_details_sheep_no"
            android:textSize="@dimen/sheep_details_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSheepNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123456"
            android:textSize="@dimen/sheep_details_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sheep_details_confirm"
        android:textStyle="bold"
        android:textSize="@dimen/sheep_details_text_size_large"
        android:background="@color/sheep_details_green"
        android:textColor="@color/white"/>


</LinearLayout>